span+modalwraper - fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -390,7 +390,7 @@ textarea {
   align-items: center;
   border-radius: 50%;
   background-color: var(--Primary-Brand-Iris);
-  ition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icon-link svg {
@@ -655,21 +655,26 @@ textarea {
   display: flex;
   justify-content: center;
   align-items: center;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 250ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  /* opacity: 0;
+  pointer-events: none; */
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-overlay.is-open{
+.modal-overlay .is-open{
   opacity: 1;
   pointer-events: auto;
 }
 
 .modal {
+  max-width: 408px;
   position: relative;
   background-color: #ffffff;
   border-radius: 4px;
   padding: 72px 24px 24px 24px;
+  box-shadow: 0px 1px 1px 0px #00000024;
+box-shadow: 0px 1px 3px 0px #0000001F;
+box-shadow: 0px 2px 1px 0px #00000033;
+
 }
 
 .modal-close-btn {
@@ -724,6 +729,17 @@ textarea {
   margin: 4px 0 8px 0;
 }
 
+.modal-wrapper{
+  position: absolute;
+  top: 8px;
+  left: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 18px;
+  height: 24px;
+}
+
 .modal-checkbox {
   display: flex;
   justify-content: center;
@@ -733,20 +749,19 @@ textarea {
 
 .modal-form-input {
   width: 100%;
+  height: 40px;
   padding: 8px 0 8px 38px;
   border: 1px solid #2e2f4266;
   border-radius: 4px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form-input:focus-within {
+.modal-form-input:focus {
   border-color: var(--Primary-Brand-Iris);
 }
 
 .modal-form-icon {
-  position: absolute;
-  top: 12px;
-  left: 17px;
+ 
   fill: var(--primary-title);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -754,6 +769,11 @@ textarea {
 .modal-form-container:focus-within .modal-form-icon {
   fill: var(--Primary-Brand-Iris);
 }
+
+
+
+
+
 
 .modal-form-text {
   width: 100%;
@@ -763,9 +783,10 @@ textarea {
   border: 1px solid #2e2f4266;
   border-radius: 4px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-bottom: 16px;
 }
 
-.modal-form-text:focus-within {
+.modal-form-text:focus {
   border-color: var(--Primary-Brand-Iris);
 }
 
@@ -796,6 +817,7 @@ textarea {
   width: 16px;
   height: 16px;
   border: 1px solid #2e2f4266;
+  border-radius: 2px;
 }
 
 .checkbox-icon {
